--- a/data_formatting/data_formatting.ipynb
+++ b/data_formatting/data_formatting.ipynb
@@ -157,180 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hospital</th>\n",
-       "      <th>hospital_size</th>\n",
-       "      <th>county</th>\n",
-       "      <th>drg_code</th>\n",
-       "      <th>name</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MOUNT CARMEL HOSPITAL</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>Stevens</td>\n",
-       "      <td>55</td>\n",
-       "      <td>Nervous System Neoplasms Without Mcc</td>\n",
-       "      <td>7203.8286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MOUNT CARMEL HOSPITAL</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>Stevens</td>\n",
-       "      <td>56</td>\n",
-       "      <td>Degenerative Nervous System Disorders With Mcc</td>\n",
-       "      <td>26883.2286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MOUNT CARMEL HOSPITAL</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>Stevens</td>\n",
-       "      <td>57</td>\n",
-       "      <td>Degenerative Nervous System Disorders Without Mcc</td>\n",
-       "      <td>8877.0974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MOUNT CARMEL HOSPITAL</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>Stevens</td>\n",
-       "      <td>64</td>\n",
-       "      <td>Intracranial Hemorrhage Or Cerebral Infarction...</td>\n",
-       "      <td>21634.9018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MOUNT CARMEL HOSPITAL</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>Stevens</td>\n",
-       "      <td>65</td>\n",
-       "      <td>Intracranial Hemorrhage Or Cerebral Infarction...</td>\n",
-       "      <td>16677.0505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>700</th>\n",
-       "      <td>Providence Sacred Heart Medical Center</td>\n",
-       "      <td>Large</td>\n",
-       "      <td>Spokane</td>\n",
-       "      <td>983</td>\n",
-       "      <td>Extensive O.R. Procedure Unrelated To Principa...</td>\n",
-       "      <td>45762.4209</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>701</th>\n",
-       "      <td>Providence Sacred Heart Medical Center</td>\n",
-       "      <td>Large</td>\n",
-       "      <td>Spokane</td>\n",
-       "      <td>987</td>\n",
-       "      <td>Non-Extensive O.R. Proc Unrelated To Principal...</td>\n",
-       "      <td>162316.4145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>702</th>\n",
-       "      <td>Providence Sacred Heart Medical Center</td>\n",
-       "      <td>Large</td>\n",
-       "      <td>Spokane</td>\n",
-       "      <td>988</td>\n",
-       "      <td>Non-Extensive O.R. Proc Unrelated To Principal...</td>\n",
-       "      <td>44776.8911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>703</th>\n",
-       "      <td>Providence Sacred Heart Medical Center</td>\n",
-       "      <td>Large</td>\n",
-       "      <td>Spokane</td>\n",
-       "      <td>989</td>\n",
-       "      <td>Non-Extensive O.R. Proc Unrelated To Principal...</td>\n",
-       "      <td>51083.0485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>704</th>\n",
-       "      <td>Providence Sacred Heart Medical Center</td>\n",
-       "      <td>Large</td>\n",
-       "      <td>Spokane</td>\n",
-       "      <td>998</td>\n",
-       "      <td>Principal Diagnosis Invalid As Discharge Diagn...</td>\n",
-       "      <td>10386.8282</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3140 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                   hospital hospital_size   county  drg_code  \\\n",
-       "0                     MOUNT CARMEL HOSPITAL        Medium  Stevens        55   \n",
-       "1                     MOUNT CARMEL HOSPITAL        Medium  Stevens        56   \n",
-       "2                     MOUNT CARMEL HOSPITAL        Medium  Stevens        57   \n",
-       "3                     MOUNT CARMEL HOSPITAL        Medium  Stevens        64   \n",
-       "4                     MOUNT CARMEL HOSPITAL        Medium  Stevens        65   \n",
-       "..                                      ...           ...      ...       ...   \n",
-       "700  Providence Sacred Heart Medical Center         Large  Spokane       983   \n",
-       "701  Providence Sacred Heart Medical Center         Large  Spokane       987   \n",
-       "702  Providence Sacred Heart Medical Center         Large  Spokane       988   \n",
-       "703  Providence Sacred Heart Medical Center         Large  Spokane       989   \n",
-       "704  Providence Sacred Heart Medical Center         Large  Spokane       998   \n",
-       "\n",
-       "                                                  name        price  \n",
-       "0                 Nervous System Neoplasms Without Mcc    7203.8286  \n",
-       "1       Degenerative Nervous System Disorders With Mcc   26883.2286  \n",
-       "2    Degenerative Nervous System Disorders Without Mcc    8877.0974  \n",
-       "3    Intracranial Hemorrhage Or Cerebral Infarction...   21634.9018  \n",
-       "4    Intracranial Hemorrhage Or Cerebral Infarction...   16677.0505  \n",
-       "..                                                 ...          ...  \n",
-       "700  Extensive O.R. Procedure Unrelated To Principa...   45762.4209  \n",
-       "701  Non-Extensive O.R. Proc Unrelated To Principal...  162316.4145  \n",
-       "702  Non-Extensive O.R. Proc Unrelated To Principal...   44776.8911  \n",
-       "703  Non-Extensive O.R. Proc Unrelated To Principal...   51083.0485  \n",
-       "704  Principal Diagnosis Invalid As Discharge Diagn...   10386.8282  \n",
-       "\n",
-       "[3140 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_providence"
+    "all_providence.to_csv(\"all_providences_fee.csv\", index=False)"
    ]
   },
   {
