Scraper working as a standalone python file. TODO: Clean up to increase pylint score

--- a/data_formatting/Peacehealth Formatting.ipynb
+++ b/data_formatting/Peacehealth Formatting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1bc881b2",
+   "id": "ce46f978",
    "metadata": {},
    "source": [
     "# Found the PeaceHealth Chargemaster"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5462c9fc",
+   "id": "d276ef3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "bcdac5dd",
+   "id": "c823f4f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "2f4cdb72",
+   "id": "ac4ae860",
    "metadata": {
     "scrolled": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "33e81d36",
+   "id": "2a3730e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6f5606c4",
+   "id": "686d3674",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec6d9c6d",
+   "id": "ce7dadb0",
    "metadata": {},
    "source": [
     "hospital, hospital_size, county, drg_code, name, price"
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2043b7e",
+   "id": "18fa1e25",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "95beadba",
+   "id": "b125501e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef4e8ba",
+   "id": "1d7d9e11",
    "metadata": {},
    "source": [
     "These are the PeaceHealth hospitals that are a part of WSHA. So we need to only get the CDM information from these ones"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "69cfc226",
+   "id": "fc7d8569",
    "metadata": {
     "scrolled": true
    },
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "e8dd068c",
+   "id": "421895c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "d4e68d69",
+   "id": "04eb7f0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "243296b7",
+   "id": "3ce06b8f",
    "metadata": {
     "scrolled": false
    },
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "45ac7289",
+   "id": "9776fa43",
    "metadata": {
     "scrolled": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b2214e",
+   "id": "7e174033",
    "metadata": {},
    "source": [
     "Sheet names to hospital names match up"
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "93491d1e",
+   "id": "2507c5fc",
    "metadata": {
     "scrolled": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db8281df",
+   "id": "c243170c",
    "metadata": {},
    "source": [
     "Each sheet has specific insurance information from different providers. Need to remove these."
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "48f87f41",
+   "id": "71ba942b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6973258",
+   "id": "903fcfbf",
    "metadata": {},
    "source": [
     "The dataset doesn't use NaN values or valid Null/None types. It has \"N/A\" and \"TB\" as string literals so can't use dropna(). Have to filter manually."
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "9b9cc0a0",
+   "id": "cb689537",
    "metadata": {},
    "outputs": [
     {
@@ -300,22 +300,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "e3bf6f1c",
+   "execution_count": 136,
+   "id": "c7fe1148",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32\n",
-      "36\n",
-      "35\n",
-      "24\n",
-      "15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "#drop rows that contain specific 'value' in 'column_name'\n",
@@ -331,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df003e5",
+   "id": "ecd6c6eb",
    "metadata": {},
    "source": [
     "Rename columns"
@@ -339,9 +327,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "d01c8293",
-   "metadata": {},
+   "execution_count": 138,
+   "id": "ef53b558",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for k, v in ph.items():\n",
@@ -352,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "9b3ff2e2",
+   "execution_count": 139,
+   "id": "71fc75d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,9 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "7a950866",
-   "metadata": {},
+   "execution_count": 140,
+   "id": "ef03352a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -435,12 +427,12 @@
        "      <td>70992.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>96125</td>\n",
+       "      <th>4</th>\n",
+       "      <td>473</td>\n",
        "      <td>Large</td>\n",
        "      <td>Whatcom</td>\n",
-       "      <td>Standardized Thought Processing Testing, Inter...</td>\n",
-       "      <td>365.00</td>\n",
+       "      <td>Cervical Spinal Fusion W/O Cc/Mcc</td>\n",
+       "      <td>70391.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -451,48 +443,48 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>230</th>\n",
-       "      <td>36600</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>Lab Arterial Blood Collection</td>\n",
-       "      <td>131.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>243</th>\n",
-       "      <td>12031</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>Repair Of Wound (2.5 Centimeters Or Less) Of T...</td>\n",
-       "      <td>630.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>62270</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>Spinal Tap For Diagnosis</td>\n",
-       "      <td>543.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>255</th>\n",
-       "      <td>71046</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>X-Ray Of Chest, 2 Vies</td>\n",
-       "      <td>360.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>99203</td>\n",
+       "      <th>295</th>\n",
+       "      <td>99205</td>\n",
        "      <td>Medium</td>\n",
        "      <td>San Juan</td>\n",
        "      <td>New Patient Office Or Other Outpatient Visit, ...</td>\n",
-       "      <td>243.00</td>\n",
+       "      <td>481.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>99243</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>Patient Office Consultation, Typically 40 Minutes</td>\n",
+       "      <td>259.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>99244</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>Patient Office Consultation, Typically 60 Minutes</td>\n",
+       "      <td>387.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>99385</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>Initial New Patient Preventive Medicine Evalua...</td>\n",
+       "      <td>286.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>99386</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>Initial New Patient Preventive Medicine Evalua...</td>\n",
+       "      <td>330.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>142 rows × 5 columns</p>\n",
+       "<p>1356 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -501,31 +493,31 @@
        "1        743         Large   Whatcom   \n",
        "2        470         Large   Whatcom   \n",
        "3        460         Large   Whatcom   \n",
-       "5      96125         Large   Whatcom   \n",
+       "4        473         Large   Whatcom   \n",
        "..       ...           ...       ...   \n",
-       "230    36600        Medium  San Juan   \n",
-       "243    12031        Medium  San Juan   \n",
-       "249    62270        Medium  San Juan   \n",
-       "255    71046        Medium  San Juan   \n",
-       "293    99203        Medium  San Juan   \n",
+       "295    99205        Medium  San Juan   \n",
+       "296    99243        Medium  San Juan   \n",
+       "297    99244        Medium  San Juan   \n",
+       "298    99385        Medium  San Juan   \n",
+       "299    99386        Medium  San Juan   \n",
        "\n",
        "                                                  name      price  \n",
        "0    Cardiac Valve & Oth Maj Cardiothoracic Proc W ...  306198.98  \n",
        "1    Uterine & Adnexa Proc For Non-Malignancy W/O C...   33923.70  \n",
        "2    Major Hip And Knee Joint Replacement Or Reatta...   59529.03  \n",
        "3                Spinal Fusion Except Cervical W/O Mcc   70992.56  \n",
-       "5    Standardized Thought Processing Testing, Inter...     365.00  \n",
+       "4                    Cervical Spinal Fusion W/O Cc/Mcc   70391.22  \n",
        "..                                                 ...        ...  \n",
-       "230                      Lab Arterial Blood Collection     131.00  \n",
-       "243  Repair Of Wound (2.5 Centimeters Or Less) Of T...     630.00  \n",
-       "249                           Spinal Tap For Diagnosis     543.00  \n",
-       "255                             X-Ray Of Chest, 2 Vies     360.00  \n",
-       "293  New Patient Office Or Other Outpatient Visit, ...     243.00  \n",
+       "295  New Patient Office Or Other Outpatient Visit, ...     481.00  \n",
+       "296  Patient Office Consultation, Typically 40 Minutes     259.00  \n",
+       "297  Patient Office Consultation, Typically 60 Minutes     387.00  \n",
+       "298  Initial New Patient Preventive Medicine Evalua...     286.00  \n",
+       "299  Initial New Patient Preventive Medicine Evalua...     330.00  \n",
        "\n",
-       "[142 rows x 5 columns]"
+       "[1356 rows x 5 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,8 +528,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "9a685b60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_phs.to_csv(\"all_peacehealth_fee.csv\", index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "03931ec0",
+   "id": "6e6f5458",
    "metadata": {},
    "source": [
     "<100: small\n",
